[gd_scene load_steps=8 format=3 uid="uid://072cpyte1q04"]

[ext_resource type="Texture2D" uid="uid://c3fqp8k7d81k2" path="res://Drone/droneSprite.png" id="1_6gnhy"]
[ext_resource type="Script" path="res://Drone/Drone.gd" id="1_iv80h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lm5r7"]
size = Vector2(40, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dwuld"]
size = Vector2(44, 39)

[sub_resource type="Animation" id="Animation_c5jvs"]
resource_name = "take_damage"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_71a87"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hfjel"]
_data = {
"RESET": SubResource("Animation_71a87"),
"take_damage": SubResource("Animation_c5jvs")
}

[node name="Drone" type="CharacterBody2D"]
script = ExtResource("1_iv80h")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_6gnhy")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 6)
shape = SubResource("RectangleShape2D_lm5r7")

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2(-12, 8.5)
shape = SubResource("RectangleShape2D_dwuld")

[node name="Timer" type="Timer" parent="."]

[node name="EdgeCheck" type="RayCast2D" parent="."]
position = Vector2(-22, 31)
target_position = Vector2(0, 3)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hfjel")
}

[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
